src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Age_Range__c</fullName>
        <label>Age Range</label>
        <picklist>
            <picklistValues>
                <fullName>13-18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19-34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35-64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>American Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic or Latino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Experience_w_Media__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Experience w/ Media?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rather not say</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sexual_Orientation__c</fullName>
        <label>Sexual Orientation</label>
        <picklist>
            <picklistValues>
                <fullName>Heterosexual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homosexual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bisexual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Storyteller_Notes__c</fullName>
        <label>Storyteller Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Team_Source__c</fullName>
        <description>This field tracks the Team(s) that acquired this contact. This field may be set by the Storybank App&apos;s create Contact functionality.</description>
        <label>Team Source</label>
        <picklist>
            <picklistValues>
                <fullName>Storybank</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Veteran__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Veteran</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>